2004-10-27 Seiichi SATO <ssato@sh.rim.or.jp>

	* inputmethod/m17nlib/im_m17nlib.c (key_event): ingore invalid
	key event. Thanks to Kenichi Handa for report.
	<http://sourceforge.net/mailarchive/message.php?msg_id=9893670>

2004-10-27 Seiichi SATO <ssato@sh.rim.or.jp>

	* xwindow/x_screen.c, xwindow/x_im.c, xwindow/x_im.h,
	  inputmethod/m17nlib/im_m17nlib.c, inputmethod/iiimf/im_iiimf.c,
	  inputmethod/kbd/im_kbd.c:
	  added parameter 'mod_ignore_mask' to x_im_new().

	* inputmethod/uim/im_uim.c: clear pressing_mod_key in focused() and
	  unfocused().

	* xwindow/x_im.h: increased IM_API_VERSION.

2004-10-26 Seiichi SATO <ssato@sh.rim.or.jp>

	* inputmethod/m17nlib/im_m17nlib.c:
	  - use EUC-JP instead of EUC-JISX0213 for the internal code convertion.
	  - fixed a segfault with ISO-2022-JP[123].
	  - show error messages if code convertion fail.

2004-10-26 Seiichi SATO <ssato@sh.rim.or.jp>

	* inputmethod/iiimf/im_iiimf.c, inputmethod/m17nlib/im_m17nlib.c,
	tool/mlconfig/po/de.po, tool/mlconfig/po/mlconfig.pot,
	tool/mlconfig/po/zh_TW.po, xwindow/x_im.c:
	fixed typo (Cound -> Could).

2004-10-26 Seiichi SATO <ssato@sh.rim.or.jp>

	* inputmethod/uim/im_uim.c (key_event): for exact matching mechanism
	in uim_press_key(), if and only if the target modifier key is pressing
	modifier bit will be set. (Thanks to gabor for reporting)

	* doc/en/PLATFORM: updated supported platforms.

2004-10-24 Seiichi SATO <ssato@sh.rim.or.jp>

	* xwindow/version.h.in: 2.9.0 -> 2.9.0 post

2004-10-24 Seiichi SATO <ssato@sh.rim.or.jp>

	* 2.9.0 released.
	  (tag "rel-2_9_0)

	* configure.in, mlterm.spec, xwindow/version.h.in, doc/en/ReleaseNote:
	  updated.

2004-10-24 Seiichi SATO <ssato@sh.rim.or.jp>

	* xwindow/x_window.h (x_window_t):
	  added following dummy members to keep the size of x_winodw_t.
	  - void *  xft_draw; (used if USE_TYPE_XFT is undefined)
	  - void *  dnd; (used if DISABLE_DND is defined)
	  - void *  set_xdnd_config; (used if DISABLE_DND is defined)
