@@ -1,3 +1,11 @@
+2004-10-28 Seiichi SATO <ssato@sh.rim.or.jp>
+
+	* inputmethod/uim/im_uim.c:
+	  - don't send engine_name to helper.
+	  - removed engine_name from im_uim_t.
+	  - allow to debug using MOD_KEY_DEBUG environment variable.
+	    (e.g., MOD_KEY_DEBUG=1 mlterm --im=uim)
+
 2004-10-27 Seiichi SATO <ssato@sh.rim.or.jp>
 
 	* inputmethod/m17nlib/im_m17nlib.c (key_event): ingore invalid
